--- a/RelatorioFinal240.rmd
+++ b/RelatorioFinal240.rmd
@@ -304,7 +304,7 @@ public.periodico.df %>%
 Sob uma perspectiva de publicações em periódicos, o Programa de Pós-Graduação
 de Biologia Animal mantém se estável com flutuações normais, mas apresentou uma queda considerável de 2014 para 2015, diminuindo o número de publicações em cerca de 18% mas recuperando em anos posteriores.
 
-Quantidade de periodicos publicados por professor(a) entre 2010 e 2017 - by Jonas
+#Quantidade de periodicos publicados por professor(a) entre 2010 e 2017
 ```{r}
 perfil.df %>%
   ggplot(aes(idLattes,PERIODICO)) +
@@ -363,7 +363,7 @@ de mestrado do Programa parecem bem estabelecidas, as supervisões de
 pós-doutorado ainda parecem incipientes, tendo em vista que não despontaram
 em nenhum dos anos pesquisados e chegaram a zero registros em 2017.
 
-#Bolsas distribuidas por ano - by Jonas
+#Bolsas distribuidas por ano
 ```{r}
 orient.df %>% filter(bolsa == "SIM") %>%
 ggplot(aes(ano,fill=natureza)) +
@@ -384,7 +384,7 @@ não recebeu bolsa. Por fim, é possível observar que o pico no número de
 orientações de mestrado registrado em 2014 não foi tão expressivo em número
 de bolsas, caracterizando um ano com elevado número de alunos não bolsistas.
 
-#Grafo de proximidade entre pesquisadores do Programa de Pos-Graduacao - by Jonas
+#Grafo de proximidade entre pesquisadores do Programa de Pos-Graduacao
 ```{r}
 plot(g, vertex.label = NA)
 ```
