--- a/RelatorioFinal240.rmd
+++ b/RelatorioFinal240.rmd
@@ -242,7 +242,7 @@ public.periodico.df <- pub.ls2df(public, 1) #artigos
 public.livros.df <- pub.ls2df(public, 2) #livros
 public.eventos.df <- pub.ls2df(public, 5) #eventos
 ```
-*Publicacao por ano*
+*Publicação por ano*
 ```{r}
 table(public.periodico.df$ano)
 ```
@@ -318,7 +318,7 @@ perfil.df %>%
 ```
 O gráfico acima demonstra o total de publicações para cada pesquisador, demonstrando relativa homogeneidade entre a quantidade de pesquisadores em média, porém há aqueles que deslocam a média para cima por estarem fora do desvio padrão acima ou abaixo, sendo que há destaque para dois pesquisadores que tem um número de publicação que corresponde cerca de quatro vezes o valor da média.
 
-#publicacao de livros por pais/ano
+#Publicação de livros por pais/ano
 ```{r}
 public.livros.df %>%
   group_by(ano,pais_de_publicacao) %>%
@@ -388,6 +388,7 @@ de bolsas, caracterizando um ano com elevado número de alunos não bolsistas.
 ```{r}
 plot(g, vertex.label = NA)
 ```
+
 O grafo acima representa os pesquisadores do Programa de Pós-Graduação em seus vértices
 e a existência de cooperação entre eles em suas arestas. É possível observar um grau
 profundo de cooperação entre a maioria dos pesquisadores, que, publicam trabalhos em 
